<resources>
    <string name="app_name">AndroidLearning</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_username">USERNAME</string>
    <string name="login_password">PASSWORD</string>
    <string name="login_username_hint">enter your username</string>
    <string name="login_password_hint">enter your password</string>
    <string name="login_btn_signin_text">Sign In</string>
    <string name="login_hint_haveNoAccount">DON’T HAVE AN ACCOUNT?</string>
    <string name="login_btn_signup_text">SIGN UP</string>
    <string name="signup_btn_signup_text">Sign up</string>
    <string name="signup_tv_fullname">FULL NAME</string>
    <string name="signup_tv_email">EMAIL</string>
    <string name="signup_tv_birthday">BIRTHDAY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tasks">TasksActivity</string>
    <string name="title_activity_test">TestActivity</string>


    <string name="loading">loading...</string>
</resources>
