<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sl_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="145dp"
            android:layout_height="112dp"
            android:id="@+id/imageView"
            android:src="@drawable/login_logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp" />
        <LinearLayout
            android:id="@+id/lv_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/login_username"
                />
            <EditText
                android:id="@+id/et_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/login_password"
                />
            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_signin_commit"
            style="@style/base_color"
            android:layout_marginTop="42dp"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_login_btn"
            android:text="@string/login_btn_signin_text"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:gravity="center" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#8e8e92"
                android:textSize="12sp"
                android:text="@string/login_hint_haveNoAccount"/>
            <Button
                android:id="@+id/btn_login_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="14sp"
                android:text="@string/login_btn_signup_text"
                android:background="@android:color/transparent"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
