<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/signup_btn_signup_text"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/btn_signup_close"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="start"
            android:src="@drawable/ic_close" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp">

        <com.example.xing.androidlearning.view.RoundImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/photo"
            app:border_inside_color="#FFFFFF"
            app:border_outside_color="#FFFFFF"
            app:border_thickness="1dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="29dp"
            android:layout_height="29dp"
            android:layout_gravity="end|top"
            android:src="@drawable/ic_plus"
            app:backgroundTint="#50d2c2"
            app:elevation="0dp"
            app:fabSize="mini"
            app:pressedTranslationZ="1dp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="45dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_tv_fullname"
            android:textSize="12sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/signup_tv_email"
            android:textSize="12sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/login_password"
            android:textSize="12sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:inputType="textPassword"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/signup_tv_birthday"
            android:textSize="12sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:inputType="date"
            android:textSize="18sp" />

        <Button
            style="@style/base_color"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_login_btn"
            android:gravity="center"
            android:text="@string/login_btn_signin_text"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
